# news_portal

./: .bump.yml  .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  BUMP_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  bootstrap_test.sh  build.sh  create_modules.sh  deploy.sh  deploy.sh.bak  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  init.sql  list_tables.py  main.py  mypy_errors.txt  nginx.conf  openapi.json  pyproject.toml  pytest.ini  requirement.md  test_folder_structure.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECRETS.md  SECURITY.md  copilot-instructions.md  dependabot.yml  issue-labeler.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  security-issue.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-docs.yml  issue-management.yml  release.yml
app/: main.py  models.py
app/alembic/: env.py
app/alembic/versions/: 09cdd169deea_add_all_newsgram_platform_models.py  95286a74982e_add_token_table.py  abfe8b597984_add_all_newsgram_platform_models.py  d9b2e3b5bc3e_initial.py
app/api/: deps.py
app/core/: config.py  db.py  security.py
app/modules/ai_features/: __init__.py
app/modules/ai_features/crud/: __init__.py  ai_features_crud.py
app/modules/ai_features/model/: __init__.py  ai_features.py
app/modules/ai_features/routes/: __init__.py  ai_features.py
app/modules/ai_features/schema/: ai_features.py
app/modules/ai_features/services/: __init__.py  ai_features_service.py
app/modules/analytics/crud/: analytics_crud.py
app/modules/analytics/model/: analytics.py
app/modules/analytics/routes/: __init__.py  analytics.py
app/modules/analytics/schema/: analytics.py
app/modules/analytics/services/: analytics_service.py
app/modules/auth/crud/: crud_auth.py  crud_token.py
app/modules/auth/model/: auth.py  token.py
app/modules/auth/routes/: __init__.py  auth.py  oauth.py  two_factor.py
app/modules/auth/schema/: auth.py  token.py
app/modules/auth/services/: auth_service.py  oauth_service.py  two_factor_service.py
app/modules/content_moderation/: __init__.py
app/modules/content_moderation/crud/: __init__.py  moderation_crud.py
app/modules/content_moderation/model/: __init__.py  moderation.py
app/modules/content_moderation/routes/: __init__.py  moderation.py
app/modules/content_moderation/schema/: __init__.py  moderation.py
app/modules/content_moderation/services/: __init__.py  moderation_service.py
app/modules/integrations/: __init__.py
app/modules/integrations/crud/: __init__.py  integrations_crud.py
app/modules/integrations/model/: integrations.py
app/modules/integrations/routes/: __init__.py  integrations.py
app/modules/live_streams/: __init__.py
app/shared/: enums.py
app/shared/crud/: base.py
app/shared/enums/: __init__.py  account_type.py  auth.py  gender.py  integrations.py  live_streams.py  messaging.py  news.py  notifications.py  posts.py  reels.py  search.py  stories.py  verification.py
app/shared/exceptions/: exceptions.py
app/shared/model/: models.py
app/shared/routes/: health.py  main.py  routes.py
app/tests/: conftest.py
app/tests/crud/: test_user.py
app/tests/scripts/: test_backend_pre_start.py
app/tests/utils/: item.py  user.py  utils.py
scripts/: create_modules.sh  generate_openapi.py  scan_password_hashes.py  update_superuser_password.py
tests/: conftest.py  run_e2e.sh  run_integration.sh  run_unit.sh
(+170 files in other folders)
