[project]
name = "news-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "alembic>=1.16.5",
    "bcrypt>=4.3.0",
    "email-validator>=2.3.0",
    "emails>=0.6",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sentry-sdk>=2.37.1",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "bump-cli>=0.3.1",
    "coverage>=7.10.6",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "types-passlib>=1.7.7.20250602",
]
