[project]
name = "news-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "alembic>=1.16.5",
    "argon2-cffi>=23.1.0",
    "authlib>=1.6.4",
    "bcrypt>=5.0.0",
    "black>=25.9.0",
    "email-validator>=2.3.0",
    "emails>=0.6",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mypy>=1.18.2",
    "passlib>=1.7.4",
    "pre-commit>=4.3.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "qrcode>=8.2",
    "ruff>=0.13.2",
    "sentry-sdk>=2.37.1",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "uvicorn>=0.35.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "app.modules.*.crud.*",
    "app.modules.*.services.*",
]
ignore_errors = false
disallow_untyped_calls = false

[project.urls]
homepage = "https://example.com"

[project.optional-dependencies]
dev = [
    "bump-cli>=0.3.1",
    "coverage>=7.10.6",
    "mypy>=1.18.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
    "types-passlib>=1.7.7.20250602",
]
